--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Frontend CI
+name: taskmaster-frontend-ci
 
 on:
   push:
@@ -24,6 +24,9 @@ jobs:
 
     - name: Run Docker container
       run: docker run -d -p 4200:80 taskmaster-frontend:latest
+
+    - name: Wait for application to start
+      run: sleep 10
 
     - name: Run tests
       run: curl http://localhost:4200
